CHANGES IN VERSION 1.5.12
------------------------
 o bug fixed in subview, width & height should be width/2 & height/2 <2016-09-01, Thu>
 
CHANGES IN VERSION 1.5.11
------------------------
 o gheatmap works with matrix <2016-08-28, Sun>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/2YLvXHMJJ6U/c4zS7yfGCAAJ
 o support parsing expression in geom_strip <2016-08-18, Thu>
 o bug fixed in geom_tiplab <2016-08-17, Wed>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/Tm9ULK7hd9E/HviXEh3CBwAJ
 o update citation info, add doi. <2016-08-16, Tue>
 
CHANGES IN VERSION 1.5.10
------------------------
 o fixed issue #72 for label of geom_treescale not displayed <2016-08-16, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/72
 
CHANGES IN VERSION 1.5.9
------------------------
 o update citation info <2016-08-12, Fri>
 
CHANGES IN VERSION 1.5.8
------------------------
 o add color parameter in geom_cladelabel, color should be of length 1 or 2 <2016-08-11, Thu>
 o geom_cladelabel support parsing expression <2016-08-11, Thu>
 
CHANGES IN VERSION 1.5.7
------------------------
 o geom_strip can accept taxa name as input but labeling strip will not supported.
   To support labeling strip, user need to input node id  <2016-07-27, Wed>
 o nodeid function for converting node label(s) to node id(s) <2016-07-27, Wed> 
 
CHANGES IN VERSION 1.5.6
------------------------
 o remove dependency of Biostring for installing ggtree <2016-07-21, Thu>
   + still needed for building vignette and for processing FASTA file
 o remove dependency of EBImage for building & installing ggtree <2016-07-21, Thu>
   + the package is still needed if user want to annotate tree with image file
 o `%<+%` now works with tbl_df <2016-07-21, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/66
 o identify method for ggtree <2016-06-28, Tue>
   + see https://guangchuangyu.github.io/2016/06/identify-method-for-ggtree